changing text alignment of size in thead. changing from right to left to prevent overlapping the arrows when using size to sort.

--- a/skins/larry/mail.css
+++ b/skins/larry/mail.css
@@ -377,7 +377,7 @@ a.iconbutton.threadmode.selected {
 
 #messagelist tr td.size {
 	width: 60px;
-	text-align: right;
+	text-align: left;
 }
 
 #messagelist tr td.from,
